--- a/myapp/templates/myapp/contact.html
+++ b/myapp/templates/myapp/contact.html
@@ -1,4 +1,27 @@
 {% extends 'myapp/base.html' %}
+
 {% block content %}
-    <h1>Contact Page</h1>
+<head>
+<style type="text/css">
+body {
+    background-color:#b0c4de;
+    }
+.services{
+     background-color:black;
+     border-style:solid;
+     border-width:10px;
+     border-color:yellow;
+     h1 {
+     color:red;
+     text-align:center;
+     text-decoration:underline;;
+      }
+    }
+</style>
+</head>
+<div class ='services'> <h1> <b> Contact Me </b> </h1> </div>
+
+<p1>Email : mr.xyzusername@gmail.com</p1> <br>
+<p2>Phone : +91 7355598442 </p2>
     {% endblock %}
+%}
