--- a/myapp/templates/myapp/thank.html
+++ b/myapp/templates/myapp/thank.html
@@ -1,3 +1,4 @@
+
 {% extends 'myapp/base.html' %}
 
 {% block content %}
@@ -6,7 +7,7 @@
 body {
     background-color:#b0c4de;
     }
-.services{
+.wel{
      background-color:black;
      border-style:solid;
      border-width:10px;
@@ -19,8 +20,8 @@ body {
     }
 </style>
 </head>
-<div class ='services'> <h1> <b> Services </b> </h1> </div>
+<div class ='wel'> <h1> <b>Welcome </b> </h1> </div>
 
-<p>services are .....</p>
+<p>Thanks for Register...</p>
     {% endblock %}
 %}
