--- a/myapp/templates/myapp/signuppage.html
+++ b/myapp/templates/myapp/signuppage.html
@@ -1,4 +1,11 @@
 {% extends 'myapp/base.html' %}
 {% block content %}
     <h1>signup Page</h1>
+<form method ='POST' action ="">
+    {%csrf_token%}
+    {{f.as_p}}
+    <button input type = "submit" value = " signup"> submit </button>
+</form>
+
+
     {% endblock %}
